--- a/retis/Cargo.toml
+++ b/retis/Cargo.toml
@@ -48,6 +48,8 @@ once_cell = "1.15"
 pager = "0.16"
 pcap = "1.3"
 pcap-file = "2.0"
+pest = "2.7"
+pest_derive = "2.7"
 plain = "0.2"
 pnet_packet = "0.34"
 rbpf = {version = "0.3", optional = true}
